<resources>
    <string name="app_name">Grocery Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="newProduct">New Products</string>
    <string name="myOrders">My Orders</string>
    <string name="myCarts">My Carts</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_new_product">New Product</string>
    <string name="offer">Offer</string>
    <string name="menu_offer">Offer</string>
</resources>