<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_Category"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_Offers"
            android:icon="@drawable/ic_offer"
            android:title="@string/offers" />

        <item
            android:id="@+id/nav_NewProduct"
            android:icon="@drawable/ic_new"
            android:title="@string/newProduct" />

        <item
            android:id="@+id/nav_MyOders"
            android:icon="@drawable/ic_order"
            android:title="@string/myOrders" />

        <item
            android:id="@+id/nav_MyCarts"
            android:icon="@drawable/ic_cart"
            android:title="@string/myCarts" />

    </group>
</menu>