<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.groceryapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.groceryapplication.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.groceryapplication.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/offersFragment"
        android:name="com.example.groceryapplication.ui.offers.OffersFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/newProductFragment"
        android:name="com.example.groceryapplication.ui.newproduct.NewProductFragment"
        android:label="@string/newProduct"
        tools:layout="@layout/fragment_newproduct" />
    <fragment
        android:id="@+id/myOrdersFragment"
        android:name="com.example.groceryapplication.ui.orders.MyOrdersFragment"
        android:label="@string/myOrders"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/myCartsFragment"
        android:name="com.example.groceryapplication.ui.carts.MyCartsFragment"
        android:label="@string/myCarts"
        tools:layout="@layout/fragment_my_carts" />
</navigation>